# 42_webserv

./: .coderabbit.yaml  .gitignore  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md  Readme.md  a.out  check.txt  nginx_conf_error.md  test.conf  test_failure.sh  webserv.drawio  webserv_conf.md  webserve
.github/workflows/: actions-notification-failure-test.yml  ai-pr-reviewer.yml  cpplint.yml  github-actions-demo.yml  gtest.yml  integration_test.yml  lint.yml  test_config.yml  unit_test.yml
CGI_test/: test.cpp
Config/: Readme.md
HandleString/: HandlingString.cpp
conf/: test1.conf  webserv.conf
config/: testconfig1.conf  testconfig2.conf  testconfig3.conf  testconfig4.conf  testconfig5.conf  testconfigerrorpage.conf  testconfigerrorpage2.conf
error_config/: errortestconfig1.conf  errortestconfig11.conf  errortestconfig12.conf  errortestconfig13.conf  errortestconfig14.conf  errortestconfig15.conf  errortestconfig16.conf  errortestconfig17.conf  errortestconfig2.conf  errortestconfig20.conf  errortestconfig21.conf  errortestconfig22.conf  errortestconfig23.conf  errortestconfig24.conf  errortestconfig25.conf  errortestconfig26.conf  errortestconfig27.conf  errortestconfig28.conf  errortestconfig3.conf  errortestconfig4.conf  errortestconfig5.conf  errortestconfig6.conf  errortestconfig7.conf  errortestconfig8.conf  errortestconfig9.conf  testconfig5.conf  testconfig6.conf  testconfig7.conf  testconfig8.conf  testconfig9.conf  testconfigerrorpageerror.conf  testconfigerrorpageerror2.conf
html/: .gitignore  404.html  50x.html  form.html  form_text.html  form_upload.html  hello.py  index.css  index.htm  index.html  index_cgi.html  login.html  login_cookie.html  login_session.html  new.html  ng_type.ng  old.html  redirect_to_google.html  upload.html  userpage.html  テスト.html
html/autoindex_files/: autoindex_page.html
html/cgi-bin/: big_output.py  cgi_params.py  error_no_shebang.py  error_not_supported_media_type.py  error_wrong_shebang.py  exit1.py  hello.pl  hello.py  hello.sh  hello_400.py  hello_404.py  hello_500.py  hello_invalid_header.py  infinite_loop.py  infinite_print.py  out_of_range.py  page.php  page.py  post_simple.py  redirect_to_index.py  sleep.py  sleep10sec.py  sleep5sec.py
html/delete_only/: index.html
html/dir_a/: 404.html  a.html  error.html  index.html
html/dir_b/: 404.html  b.html  error.html  index.html
html/dir_c/: 404.html  c.html  error.html  index.html
html/hoge/: 404.html  index.html
html/new/: index.html
html/old/: index.html
includes/: Color.hpp  Config.hpp  HandlingString.hpp  Result.hpp  webserv.hpp
playground/: .gitignore  a.cpp  emoji.cpp  map_template.cpp  playground_socket.cpp  stoi.cpp
srcs/: get_valid_config_file_path.cpp  main.cpp  main_request.cpp
srcs/Client/: Client.cpp  Client.hpp  client_main.cpp
srcs/ClientSession/: ClientSession.cpp  ClientSession.hpp
srcs/Config/: Config.cpp  Config.hpp  ErrorPage.cpp  LocationConfig.cpp  Readme.md  ServerConfig.cpp  config_getter.cpp  function.txt  interpret_config_location.cpp  is_serverformat.cpp
srcs/Configuration/: AbstractSyntaxTree.cpp  AbstractSyntaxTree.hpp  Configuration.cpp  Configuration.hpp  Parser.hpp  Tokenizer.hpp
srcs/Const/: Constant.cpp  Constant.hpp
srcs/Debug/: Debug.cpp  Debug.hpp
srcs/Error/: Error.cpp  Error.hpp
srcs/ErrorPage/: ErrorPage.cpp  ErrorPage.hpp
srcs/Event/: Event.cpp  Event.hpp  process_cgi_event.cpp  process_client_event.cpp  process_file_event.cpp
srcs/HandleString/: HandlingString.cpp
srcs/HandlingString/: HandlingString.cpp  HandlingString.hpp
srcs/HttpRequest/: BaseKeyValueMap.cpp  HttpRequest.cpp  HttpRequest.hpp  HttpRequest_Date.cpp  HttpRequest_FieldValueMap.cpp  HttpRequest_LinkClass.cpp  HttpRequest_MediaType.cpp  HttpRequest_MultiFieldValues.cpp  HttpRequest_SecurityPolicy.cpp  HttpRequest_SingleFieldValue.cpp  HttpRequest_TwoValueSet.cpp  HttpRequest_ValueArraySet.cpp  HttpRequest_ValueDateSet.cpp  HttpRequest_ValueMap.cpp  HttpRequest_ValueSet.cpp  HttpRequest_ValueWeightArraySet.cpp  Makefile  Readme.Md  RequestLine.cpp  Requestvalue_set.cpp  TwoValueSet.cpp  ValueArraySet.cpp  ValueDateSet.cpp  ValueInsertMethod.cpp  ValueMap.cpp  ValueSet.cpp  ValueWeightArraySet.cpp  a.out  main.cpp  test.cpp
srcs/HttpResponse/: HttpResponse.cpp  HttpResponse.hpp  create_response_message.cpp  error_pages.cpp
srcs/IOMultiplexer/: IOMultiplexer.cpp  IOMultiplexer.hpp
srcs/NumericHandle/: NumericHandle.cpp  NumericHandle.hpp
srcs/Server/: Server.cpp  Server.hpp  process_event.cpp  timeout_manager.cpp
srcs/Session/: Session.cpp  Session.hpp
srcs/Socket/: Socket.cpp  Socket.hpp
srcs/StringHandler/: HttpMessageParser.cpp  HttpMessageParser.hpp  HttpMessageParserIs.cpp  HttpMessageParserSkip.cpp  StringHandler.cpp  StringHandler.hpp
srcs/TestMain/: main.cpp  test_configread.cpp  test_handlestring_main.cpp  test_socket.cpp
srcs/includes/: BaseKeyValueMap.hpp  Config.hpp  ContentRange.hpp  ErrorPage.hpp  HandlingString.hpp  HttpRequest.hpp  LocationConfig.hpp  RequestLine.hpp  Requestvalue_set.hpp  ServerConfig.hpp  Socket.hpp  TwoValueSet.hpp  ValueArraySet.hpp  ValueDateSet.hpp  ValueInsertMethod.hpp  ValueMap.hpp  ValueSet.hpp  ValueWeightArraySet.hpp
test/: .gitignore
test/integration/: integration_test.conf  permission_files.sh  prepare_test_file.sh  run_test.sh  test_cgi.sh  test_delete.sh  test_err.sh  test_func.sh  test_get.sh  test_post.sh  test_siege.sh
test/test_conf/: test_multi_server.conf  test_server.conf
test/unit_test/: HttpRequesttest.cpp  Reakscheck.cpp  TEstMain.cpp  TestAddingUtils.cpp  TestConfig.cpp  TestConfigReading.cpp  TestConfiguration.cpp  TestDelete.cpp  TestError.cpp  TestFileHandler.cpp  TestHandlingString.cpp  TestHttpMessageParser.cpp  TestHttpRequest.cpp  TestHttpRequestParser.cpp  TestHttpRequest_Array.cpp  TestHttpRequest_List.cpp  TestHttpRequest_TwoValueSet.cpp  TestIntepretPath.cpp  TestIsConfig.cpp  TestIsConfigFormat.cpp  TestIsConfigLineFormat.cpp  TestLeaks.cpp  TestMain.cpp  TestNumericHandling.cpp  (+10 more)
www/: .gitignore  406.html  form.html  index.html
(+383 files in other folders)
